much expanded chromosome tutorial

--- a/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/RB_Chromosome_Evolution_Tutorial.tex
+++ b/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/RB_Chromosome_Evolution_Tutorial.tex
@@ -21,8 +21,8 @@
 \def \GlobalResourcePath {./}
 \input{RB_Chromosome_Evolution_Tutorial_0_content}
 \input{RB_Chromosome_Evolution_Tutorial_1_content}
-%\input{RB_Chromosome_Evolution_Tutorial_2_content}
-%\input{RB_Chromosome_Evolution_Tutorial_3_content}
+\input{RB_Chromosome_Evolution_Tutorial_2_content}
+\input{RB_Chromosome_Evolution_Tutorial_3_content}
 %\input{RB_Chromosome_Evolution_Tutorial_4_content}
 %\input{RB_Chromosome_Evolution_Tutorial_5_content}
 
