--- a/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/bayes.bib
+++ b/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/bayes.bib
@@ -433,6 +433,19 @@ url          = {http://www.R-project.org}
   pages     = {123--140}
 }
 
+
+@article{bollback2006simmap,
+  title={SIMMAP: stochastic character mapping of discrete traits on phylogenies},
+  author={Bollback, Jonathan P},
+  journal={BMC bioinformatics},
+  volume={7},
+  number={1},
+  pages={88},
+  year={2006},
+  publisher={BioMed Central}
+}
+
+
 @InProceddings{bollback04,
   author    = {J. Bollback},
   editor    = {R. Nielsen},
@@ -4107,6 +4120,17 @@ url          = {http://www.R-project.org}
   pages     = {87--343}
 }
 
+@article{ohi2006molecular,
+  title={Molecular phylogeny of Aristolochia sensu lato (Aristolochiaceae) based on sequences of rbcL, matK, and phyA genes, with special reference to differentiation of chromosome numbers},
+  author={Ohi-Toma, Tetsuo and Sugawara, Takashi and Murata, Hiroko and Wanke, Stefan and Neinhuis, Christoph and Murata, Jin},
+  journal={{Systematic Botany}},
+  volume={31},
+  number={3},
+  pages={481--492},
+  year={2006},
+  publisher={BioOne}
+}
+
 @Article{ooyen79,
   author    = {A. van Ooyen and J. van den Berg and N. Mantel and C. Weissmann},
   title     = {Comparison of total sequence of a cloned rabbit $\beta$-globin gene and its flanking regions with a homologous mouse sequence},
@@ -4573,6 +4597,17 @@ author = "Aloysius J. Phillips",
   year      = 2009,
   volume    = 36,
   pages     = {1211--1220}
+}
+
+@article{revell2012phytools,
+  title={phytools: an R package for phylogenetic comparative biology (and other things)},
+  author={Revell, Liam J},
+  journal={Methods in Ecology and Evolution},
+  volume={3},
+  number={2},
+  pages={217--223},
+  year={2012},
+  publisher={Wiley Online Library}
 }
 
 @Article{ribeiro98,
@@ -6063,6 +6098,14 @@ doi 		= {10.1093/sysbio/sys029}
   year      = 1996,
   volume    = 93,
   pages     = {548--553}
+}
+
+@article{zenil2017testing,
+  title={Testing the association of phenotypes with polyploidy: An example using herbaceous and woody eudicots},
+  author={Zenil-Ferguson, Rosana and Ponciano, Jos{\'e} M and Burleigh, J Gordon},
+  journal={Evolution},
+  year={2017},
+  publisher={Wiley Online Library}
 }
 
 @Article{zhang97,
