added more to chromo tutorial

--- a/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/RB_Chromosome_Evolution_Tutorial_0_content.tex
+++ b/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/RB_Chromosome_Evolution_Tutorial_0_content.tex
@@ -21,8 +21,8 @@ estimates diversification rates and chromosome number evolution.
 Finally, we will briefly discuss comparing models of chromosome evolution using
 reversible-jump MCMC and Bayes factors.
 
-If you use \RevBayes for chromosome evolution analysis, please cite the original 
-papers that describe the chromosome evolution model as well as \citet{freyman2016cladogenetic}
+If you use \RevBayes for chromosome evolution analyses, please cite the original 
+papers that describe the chromosome evolution models as well as \citet{freyman2016cladogenetic}
 which describes in detail the \RevBayes implementation of these models.
 
 \subsection*{Contents}
@@ -33,6 +33,13 @@ The Chromosome Number Evolution tutorial contains several sections:
 \item Section \ref{sec:chromo_basic_intro}: Overview of chromosome number evolution models
 \item Section \ref{sec:chromo_basic_analysis}: A simple ChromEvol analysis
 \item Section \ref{sec:chromo_extensions}: Basic extensions of the model
+    \begin{itemize}
+    \item \ref{subsect:root_freq}: Improved root frequences
+    \item \ref{subsect:stoch_mapping}: Stochastic character mapping of chromosome evolution
+    \item \ref{subsect:joint_estimation}: Joint estimation of phylogeny and chromosome evolution
+    \item \ref{subsect:bichrom}: Associating chromosome evolution with phenotype: BiChroM
+    \item \ref{subsect:clado_simple}: Incorporating cladogenetic and anagenetic chromosome changes
+    \end{itemize}
 \item Section \ref{sec:chromo_sse_intro}: Overview of the ChromoSSE model
 \item Section \ref{sec:chromo_sse_analysis}: A simple ChromoSSE analysis
 \item Section \ref{sec:chromo_model_comparison}: Model comparison and hypothesis testing 
