--- a/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/bayes.bib
+++ b/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/bayes.bib
@@ -4584,7 +4584,7 @@ author = "Aloysius J. Phillips",
 @Article{ree08,
   author    = {R. H. Ree and S. A. Smith},
   title     = {Maximum likelihood inference of geographic range evolution by dispersal, local extinction, and cladogenesis},
-  journal   = {Systematic Biology},
+  journal   = {{Systematic Biology}},
   year      = 2008,
   volume    = 57,
   pages     = {4--14}
