--- a/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/RB_Chromosome_Evolution_Tutorial_3_content.tex
+++ b/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/RB_Chromosome_Evolution_Tutorial_3_content.tex
@@ -63,7 +63,7 @@ You can experiment with different weights for each MCMC move.
 
 
 \medskip
-\subsection{Stochastic Character Mapping of Chromosome Evolution}\label{subsub:joint_estimation}
+\subsection{Stochastic Character Mapping of Chromosome Evolution}\label{subsect:stoch_mapping}
 
 In \RevBayes both ancestral states and stochastic character maps can be sampled from
 continuous-time Markov chain (CTMC) and state-dependent speciation and
@@ -121,7 +121,7 @@ Figure \ref{fig:simmap} is an example stochastic character map of our \textit{Ar
 \end{figure}
 
 \medskip
-\subsection{Joint Estimation of Phylogeny and Chromosome Evolution}\label{subsub:joint_estimation}
+\subsection{Joint Estimation of Phylogeny and Chromosome Evolution}\label{subsect:joint_estimation}
 
 
 In \RevBayes the chromosome evolution models can be used jointly with a model of molecular evolution 
@@ -132,8 +132,8 @@ and allows the chromosome numbers to help inform the phylogeny.
 Setting up a model that jointly infers chromosome evolution and phylogeny requires mostly combining
 elements covered in the \textbf{Molecular Models of Character Evolution} tutorial with the
 what has already been covered in Section \ref{sec:chromo_basic_analysis} of this tutorial. We will not repeat how to set up the chromosome model
-component, but show what must be added to the example in Section \ref{sec:chromo_basic_analysis} above.
-However, we have provided a full working example script \texttt{scripts/ChromEvol\_joint.Rev}.
+component, but we'll step through what must be added to the example in Section \ref{sec:chromo_basic_analysis} above.
+Furthermore, we have provided a full working example script \texttt{scripts/ChromEvol\_joint.Rev}.
 
 \subsubsection{Reading in Molecular Data and Setting Clade Constraints}
 
@@ -157,9 +157,11 @@ Since we want to jointly infer ancestral states, we need to set an a priori
 rooting constraint on our phylogeny. So here we set an ingroup and outgroup.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-outgroup = ["Aristolochia_serpantaria", "Aristolochia_arborea", "Aristolochia_wardiana",
-            "Aristolochia_californica", "Aristolochia_saccata", "Aristolochia_mollisima",
-            "Aristolochia_tomentosa", "Aristolochia_neolongifolia_SETS52", "Aristolochia_neolongifolia_SETS96"]
+outgroup = ["Aristolochia_serpantaria", "Aristolochia_arborea", 
+            "Aristolochia_wardiana", "Aristolochia_californica", 
+            "Aristolochia_saccata", "Aristolochia_mollisima",
+            "Aristolochia_tomentosa", "Aristolochia_neolongifolia_SETS52", 
+            "Aristolochia_neolongifolia_SETS96"]
 \end{lstlisting}
 \end{snugshade*}}
 Here we loop through each taxon and if it is not present in the outgroup
@@ -295,13 +297,169 @@ Like before, we can plot the results using the \RevGadgets R package.
 
 \bigskip
 
-\subsection{Associating Chromosome Evolution with Phenotype: BiChroM}\label{subsect:clado_simple}
+\subsection{Associating Chromosome Evolution with Phenotype: BiChroM}\label{subsect:bichrom}
 
+We may be interested in testing whether the rates of chromosome number evolution
+are associated with a certain phenotype.
+Here we set up a binary phenotypic character and estimate separate rates of chromosome
+evolution for each state of the phenotype. 
+We'll use a model that describes the joint evolution of both the
+phenotypic character and chromosome evolution. This model (BiChroM) was introduced in \citet{zenil2017testing}. In RevBayes the BiChroM model can easily be extended to multistate phenotypes and/or 
+hidden states, plus cladogenetic changes could be incorporated into the model.
 
+In this example we will again use chromosome count data from \citet{ohi2006molecular} for the plant 
+genus \textit{Aristolochia}. 
+For the phenotype we will examine gynostemium morphology. \textit{Aristolochia} flowers have an extensively 
+modified perianth that traps and eventually releases pollinators to ensure cross pollination 
+(this is why the flowers resemble pipes and are commonly called Dutchman's pipes). The gynostemium 
+is a reproductive organ found only in Aristolchiaceae and Orchids that consists of fused stamens 
+and pistil that pollinators must interact with during pollination. The subgenus Isotrema has highly
+reduced three-lobed gynostemium. Other members of \textit{Aristolochia} have gynostemium subdivided into
+5 to 24 lobes. We'll test for an association of this phenotype with changes in the rates of 
+chromosome evolution. 
+\begin{itemize}
+\item phenotype state 0 = 3 lobed gynostemium
+\item phenotype state 1 = 5 t0 24 lobed gynostemium
+\end{itemize}
+Much of this exercise is a repeat of what was already covered in Section \ref{sec:chromo_basic_analysis},
+so we will only touch on the model components that are different.
+We have provided a full working example script \texttt{scripts/BiChroM.Rev}
+In this example the phylogeny is assumed known. One could combine this with the exercise above
+to jointly infer the phylogeny.
+
+\subsubsection{Setting up the BiChroM model}
+
+The first step will be to read in the observed data. This is done as before,
+with the exception that the data is set up a bit differently. The data matrix
+must now represent both the observed chromosome counts \textit{and} the observed
+phenotype. So in this file states 1-26 represent the haploid number $n$ of chromosome for lineages 
+with gynostemium subdivided in 5 to 24 lobes, and states 27-52 represent the haploid number $n + 27$
+for lineages with simple 3 lobed gynostemium.
+Note the \texttt{stateLabels} argument must now be set to 2 times the maximum number of chromosomes.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
+chromo_data = readCharacterDataDelimited("data/aristolochia_bichrom_counts.tsv", stateLabels=2*(max_chromo + 1), type="NaturalNumbers", delimiter="\t", headers=FALSE)
 \end{lstlisting}
 \end{snugshade*}}
+Like before, we'll use exponential priors to model the rates of polyploidy and 
+dysploidy events along the branches of the phylogeny
+However, here we set up two rate parameters for each type of chromosome change --
+one for phenotype state 0 and one for phenotype state 1.
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+gamma_0 ~ dnExponential(10.0)
+gamma_1 ~ dnExponential(10.0)
+delta_0 ~ dnExponential(10.0)
+delta_1 ~ dnExponential(10.0)
+rho_0 ~ dnExponential(10.0)
+rho_1 ~ dnExponential(10.0)
+\end{lstlisting}
+\end{snugshade*}}
+Add MCMC moves for each of the rates.
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+mvi = 1
+moves[mvi++] = mvScale(gamma_0, lambda=1, weight=1)
+moves[mvi++] = mvScale(delta_0, lambda=1, weight=1)
+moves[mvi++] = mvScale(rho_0, lambda=1, weight=1)
+moves[mvi++] = mvScale(gamma_1, lambda=1, weight=1)
+moves[mvi++] = mvScale(delta_1, lambda=1, weight=1)
+moves[mvi++] = mvScale(rho_1, lambda=1, weight=1)
+\end{lstlisting}
+\end{snugshade*}}
+Now we create the rate matrix for the chromosome evolution model.
+We will set up two rate matrices, one for each phenotype state.
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+Q_0 := fnChromosomes(max_chromo, gamma_0, delta_0, rho_0)
+Q_1 := fnChromosomes(max_chromo, gamma_1, delta_1, rho_1)
+\end{lstlisting}
+\end{snugshade*}}
+Again, we could have include the rate of demi-polyploidization \texttt{eta}
+and rate modifiers like this:
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+Q_0 := fnChromosomes(max_chromo, gamma_0, delta_0, rho_0, eta_0, gamma_l_0, delta_l_0) 
+Q_1 := fnChromosomes(max_chromo, gamma_1, delta_1, rho_1, eta_1, gamma_l_1, delta_l_1) 
+\end{lstlisting}
+\end{snugshade*}}
+Now we create the rates of transitioning between phenotype states.
+Any model could be used (all rates equal models, Dollo models, etc.)
+but here we estimate a different rate for each transition between states 0 and 1.
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+q_01 ~ dnExponential(10.0)
+q_10 ~ dnExponential(10.0)
+moves[mvi++] = mvScale(q_01, lambda=1, weight=1)
+moves[mvi++] = mvScale(q_10, lambda=1, weight=1)
+\end{lstlisting}
+\end{snugshade*}}
+And finally we create the transition rate matrix \texttt{Q\_b} 
+for the joint model of phenotypic and chromosome evolution.
+First we will initialize the matrix with all zeros:
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+s = Q_0[1].size()
+for (i in 1:(2 * s)) {
+    for (j in 1:(2 * s)) {
+        Q[i][j] := 0.0
+    }
+}
+\end{lstlisting}
+\end{snugshade*}}
+And now we populate the matrix with the transition rates.
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+for (i in 1:(2 * s)) {
+    for (j in 1:(2 * s)) {
+        if (i <= s) {
+            if (j <= s) {
+                if (i != j) {
+                    # chromosome changes within phenotype state 0
+                    Q[i][j] := abs(Q_0[i][j])
+                }
+            } else {
+                if (i == (j - s)) {
+                    # transition from phenotype state 0 to 1
+                    Q[i][j] := q_01
+                }
+            }
+        } else {
+            if (j <= s) {
+                if (i == (j + s)) {
+                    # transition from phenotype state 1 to 0
+                    Q[i][j] := q_10
+                }
+            } else {
+                if (i != j) {
+                    # chromosome changes within phenotype state 1
+                    k = i - s
+                    l = j - s
+                    Q[i][j] := abs(Q_1[k][l])
+                }
+            }
+        }
+    }
+}
+Q_b := fnFreeK(Q, rescaled=false)
+\end{lstlisting}
+\end{snugshade*}}
+The rest of the analysis is essentially
+the same as in Section \ref{sec:chromo_basic_analysis}. Just make sure
+to pass the \texttt{Q\_b} matrix into the CTMC object.
+
+\subsubsection{BiChroM Analysis Results}
+
+In Figure \ref{fig:bichrom_rates} the rates of
+chromosome gains and losses for each of the phenotype states are plotted.
+\textit{Aristolochia} lineages with complex gynostemium subdivided into many lobes
+have higher rates of dysploid changes than lineages with simple 3-lobed gynostemium.
+In Figure \ref{fig:bichrom} the marginal maximum a posteriori estimates of ancestral
+chromosome number and gynostemium morphology are plotted.
+From this we can see that an evolutionary reduction occured on the lineage
+leading to the Isotreme clade. The common ancestor for all
+\textit{Aristolochia} is inferred to have complex many lobed
+gynostemium which was reduced to a more simple 3-lobed form in Isotrema.  
 
 \begin{figure}[h!]
 \fbox{
@@ -328,14 +486,112 @@ Like before, we can plot the results using the \RevGadgets R package.
 
 \subsection{Incorporating Cladogenetic and Anagenetic Chromosome Changes}\label{subsect:clado_simple}
 
+Changes in chromosome number can increase reproductive isolation and may drive the diversification
+of some lineages \citep{stebbins1971chromosomal}. 
+To test for the association
+of chromosome changes with speciation we must extend our models to incorporate cladogenetic
+changes. Cladogenetic changes are changes that occur only at lineage splitting events.
+All the models of chromosome evolution we have examined so far model
+only anagenetic changes, changes that occur within a lineage. 
 
+We introduce here a simple model of cladogenetic change that handles cladogenetic events
+similarly to the widely used Dispersal-Extinction-Cladogenesis \citep[DEC;][]{ree08} 
+models of biogeographic range evolution.
+A major limitation of such models is that they only handle model cladogenetic changes
+at the observed speciation evens on the phylogeny.
+Many other unobserved speciation events likely occurred, but are not present
+in the reconstructed phylogeny due to incomplete taxon sampling and lineages
+going extinct. In Section \ref{sec:chromo_sse_intro} we will introduce the
+ChromoSSE model, which explicitly models unobserved speciation events but at the
+cost of increased model complexity.
+
+Much of this exercise is a repeat of what was already covered in Section \ref{sec:chromo_basic_analysis},
+so we will only touch on the model components that must be changed to incorporate cladogenetic
+changes.
+We have provided a full working example script \texttt{scripts/ChromEvol\_clado.Rev}
+
+\subsubsection{A Simple Cladogenetic Model}
+
+The anagenetic transition rate matrix should be set up just as before.
+The cladogenetic changes, though, are modeled as a vector of probabilities 
+that sum up to 1 (a simplex). Each element of the vector is the 
+probability of a certain type of cladogenetic event occurring.
+To set this up, we'll first draw a 'weight' for each type of 
+cladogenetic event from an exponential distribution. To keep the
+example simply we are excluding cladogenetic demi-polyploidization.
+We then pass each 'weight' into a simplex to create the vector
+of probabilities.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
+clado_no_change_pr ~ dnExponential(10.0)
+clado_fission_pr ~ dnExponential(10.0)
+clado_fusion_pr ~ dnExponential(10.0)
+clado_polyploid_pr ~ dnExponential(10.0)
+clado_demipoly_pr <- 0.0
+clado_type := simplex([clado_no_change_pr, clado_fission_pr, clado_fusion_pr, clado_polyploid_pr, clado_demipoly_pr])
 \end{lstlisting}
 \end{snugshade*}}
-
-
-
+The function \texttt{fnChromosomesCladoProbs} 
+produces a matrix of cladogenetic probabilities. This is a very
+large and sparse 3 dimensional matrix that contains the transition probabilities 
+of every possible state of the parent lineage transitioning to every possible 
+combination of states of the two daughter lineages.
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+clado_prob := fnChromosomesCladoProbs(clado_type, max_chromo)
+\end{lstlisting}
+\end{snugshade*}}
+We can't forget to add moves for each cladogenetic event:
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+moves[mvi++] = mvScale(clado_no_change_pr, lambda=1.0, weight=2)
+moves[mvi++] = mvScale(clado_fission_pr, lambda=1.0, weight=2)
+moves[mvi++] = mvScale(clado_fusion_pr, lambda=1.0, weight=2)
+moves[mvi++] = mvScale(clado_polyploid_pr, lambda=1.0, weight=2)
+\end{lstlisting}
+\end{snugshade*}}
+Now we can create the cladogenetic CTMC model.
+We must pass in both the \texttt{Q} matrix that represents the anagenetic changes,
+and the \texttt{clado\_probs} matrix that represents the cladogenetic changes.
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+chromo_ctmc ~ dnPhyloCTMCClado(Q=Q, tree=phylogeny, cladoProbs=clado_prob, rootFrequencies=root_frequencies, type="NaturalNumbers", nSites=1)
+\end{lstlisting}
+\end{snugshade*}}
+Most of the rest of the analysis is the same.
+For the ancestral state monitor we want to be sure to specify 
+\texttt{withStartState=true} so that we sample the states both at
+start and end of each branch. This enables us to reconstruct cladogenetic events.
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+monitors[2] = mnJointConditionalAncestralState(filename="output/ChromEvol_clado_anc_states.log", printgen=10, tree=phylogeny, ctmc=chromo_ctmc, withStartStates=true, type="NaturalNumbers")
+\end{lstlisting}
+\end{snugshade*}}
+When summarizing the ancestral state results we also want to specify 
+\texttt{include\_start\_states=true} so that we summarize the cladogenetic changes.
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+ancestralStateTree(phylogeny, anc_state_trace, "output/ChromEvol_clado_final.tree", include_start_states=true, burnin=0.25, reconstruction="marginal")
+\end{lstlisting}
+\end{snugshade*}}
+And that's it!
+Figure \ref{fig:chromevol_clado} shows the ancestral state estimates plotted on the
+tree. The start states of each lineage (the state after cladogenesis) are plotted
+on the 'shoulders' of each lineage.
+You may want to try stochastic character mapping for a different and possibly better
+visualization of cladogenetic and anagenetic changes.
+\begin{figure}[h!]
+\fbox{
+\begin{minipage}{\textwidth}\centering
+\includegraphics[width=0.92\textwidth,angle=0]{\ResourcePath figures/ChromEvol_clado}
+\caption{\small Maximum a posteriori ancestral chromosome numbers for \textit{Aristolochia}
+    estimated using a simple cladogenetic and anagenetic chromosome evolution model.
+    The start states of each lineage (the state after cladogenesis) are plotted
+    on the 'shoulders' of each lineage, and show where cladogenetic events occurred.
+    This example analysis did not fully converge and shows a very high number of cladogenetic events.}
+\end{minipage}}
+\label{fig:chromevol_clado}
+\end{figure}
 
 
 \newpage
