another section for the chromo tutorial

--- a/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/RB_Chromosome_Evolution_Tutorial_0_content.tex
+++ b/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/RB_Chromosome_Evolution_Tutorial_0_content.tex
@@ -40,8 +40,8 @@ The Chromosome Number Evolution tutorial contains several sections:
     \item \ref{subsect:bichrom}: Associating chromosome evolution with phenotype: BiChroM
     \item \ref{subsect:clado_simple}: Incorporating cladogenetic and anagenetic chromosome changes
     \end{itemize}
-\item Section \ref{sec:chromo_sse_intro}: Overview of the ChromoSSE model
-\item Section \ref{sec:chromo_sse_analysis}: A simple ChromoSSE analysis
+\item Section \ref{sec:chromosse_intro}: Overview of the ChromoSSE model
+\item Section \ref{sec:chromosse_analysis}: A simple ChromoSSE analysis
 \item Section \ref{sec:chromo_model_comparison}: Model comparison and hypothesis testing 
 \end{itemize}
 
