--- a/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/bayes.bib
+++ b/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/bayes.bib
@@ -1662,6 +1662,18 @@ url          = {http://www.R-project.org}
   pages     = {89--114}
 }
 
+@Article{goldberg2012tempo,
+  Title                    = {Tempo and mode in plant breeding system evolution},
+  Author                   = {Goldberg, Emma E and Igi{\'c}, Boris},
+  Journal                  = {Evolution},
+  Year                     = {2012},
+  Number                   = {12},
+  Pages                    = {3701--3709},
+  Volume                   = {66},
+
+  Publisher                = {Wiley Online Library}
+}
+
 @article{goldberg11,
   title={Phylogenetic inference of reciprocal effects between geographic range evolution and diversification},
   author={Goldberg, Emma E and Lancaster, Lesley T and Ree, Richard H},
@@ -3587,6 +3599,19 @@ url          = {http://www.R-project.org}
   journal   = {http://mesquiteproject.org},
   year      = 2006
 }
+
+@Article{maddison2007estimating,
+  Title                    = {Estimating a binary character's effect on speciation and extinction},
+  Author                   = {Maddison, Wayne P and Midford, Peter E and Otto, Sarah P},
+  Journal                  = {{Systematic Biology}},
+  Year                     = {2007},
+  Number                   = {5},
+  Pages                    = {701--710},
+  Volume                   = {56},
+
+  Publisher                = {Oxford University Press}
+}
+
 
 @Article{maguire52,
   author    = {B. A. Maguire and E. S. Pearson and A. H. A. Wynn},
