--- a/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/bayes.bib
+++ b/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/bayes.bib
@@ -433,6 +433,17 @@ url          = {http://www.R-project.org}
   pages     = {123--140}
 }
 
+@Article{bokma2002detection,
+  Title                    = {Detection of punctuated equilibrium from molecular phylogenies},
+  Author                   = {Bokma, F},
+  Journal                  = {Journal of Evolutionary Biology},
+  Year                     = {2002},
+  Number                   = {6},
+  Pages                    = {1048--1056},
+  Volume                   = {15},
+
+  Publisher                = {Wiley Online Library}
+}
 
 @article{bollback2006simmap,
   title={SIMMAP: stochastic character mapping of discrete traits on phylogenies},
