--- a/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/RB_Chromosome_Evolution_Tutorial_4_content.tex
+++ b/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/RB_Chromosome_Evolution_Tutorial_4_content.tex
@@ -22,15 +22,6 @@ Not only does the ClaSSE framework enable the modeling of
 unobserved speciation, but it also provides an easily extensible
 framework for testing state-dependent speciation and extinction rates.
 
-The ChromoSSE model \citep{freyman2016cladogenetic}
-is a special case of the ClaSSE model that models chromosome
-changes.
-Compared to the previously discussed CTMC models of chromosome evolution,
-SSE models require additional complexity since they must also
-model the extinction and speciation processes.
-However, simple extensions to the ChromoSSE model will enable explicit 
-tests of different extinction rates for polyploid and diploid lineages,
-and testing different rates of chromosome speciation associated with phenotypes or habitat.
 
 \begin{figure}[h!]
 \fbox{
@@ -39,7 +30,7 @@ and testing different rates of chromosome speciation associated with phenotypes 
     \caption{
     An illustration of chromosome evolution events that could occur
     during each small time interval $\Delta t$ along the branches
-    of a phylogeny.
+    of a phylogeny as modeled in ChromoSSE \citep{freyman2016cladogenetic}.
     The set of differential equations
     (subfigures a and b, respectively)
     sum over each possible chromosome evolution event
@@ -70,9 +61,19 @@ and testing different rates of chromosome speciation associated with phenotypes 
 \label{fig:chromosse_ode}
 \end{figure}
 
+The ChromoSSE model \citep{freyman2016cladogenetic}
+is a special case of the ClaSSE model that models chromosome
+changes.
+Compared to the previously discussed CTMC models of chromosome evolution,
+SSE models require additional complexity since they must also
+model the extinction and speciation processes.
+However, simple extensions to the ChromoSSE model will enable explicit 
+tests of different extinction rates for polyploid and diploid lineages,
+and testing different rates of chromosome speciation associated with phenotypes or habitat.
+
 \subsection{The ChromSSE Likelihood Calculation}
 
-All the previous models used
+All the previous models of chromosome number evolution discussed in the tutorial used
 the standard pruning algorithm \citep{felsenstein81} to calculate
 the likelihood of chromosome evolution over the phylogeny.
 For the ChromoSSE model we must use a different approach;
