--- a/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/RB_Chromosome_Evolution_Tutorial_3_content.tex
+++ b/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/RB_Chromosome_Evolution_Tutorial_3_content.tex
@@ -500,13 +500,14 @@ only anagenetic changes, changes that occur within a lineage.
 We introduce here a simple model of cladogenetic change that handles cladogenetic events
 similarly to the widely used Dispersal-Extinction-Cladogenesis \citep[DEC;][]{ree08} 
 models of biogeographic range evolution.
-A major limitation of such models is that they only handle model cladogenetic changes
-at the observed speciation evens on the phylogeny.
+A major limitation of such models is that they only model cladogenetic changes
+at the observed speciation events on the phylogeny.
 Many other unobserved speciation events likely occurred, but are not present
 in the reconstructed phylogeny due to incomplete taxon sampling and lineages
-going extinct. In Section \ref{sec:chromo_sse_intro} we will introduce the
-ChromoSSE model, which explicitly models unobserved speciation events but at the
-cost of increased model complexity.
+going extinct. This can bias the relative rates of anagenetic and cladogenetic change.
+In Section \ref{sec:chromosse_intro} we will introduce the
+ChromoSSE model, which reduces this bias by explicitly modeling unobserved speciation events but at the
+cost of additional model complexity.
 
 Much of this exercise is a repeat of what was already covered in Section \ref{sec:chromo_basic_analysis},
 so we will only touch on the model components that must be changed to incorporate cladogenetic
