--- a/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/bayes.bib
+++ b/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/bayes.bib
@@ -6199,3 +6199,62 @@ doi 		= {10.1093/sysbio/sys029}
   pages     = {877--888}
 }
 
+@Article{green1995reversible,
+  Title                    = {{Reversible jump Markov chain Monte Carlo computation and Bayesian model determination}},
+  Author                   = {Green, Peter J},
+  Journal                  = {Biometrika},
+  Year                     = {1995},
+  Number                   = {4},
+  Pages                    = {711--732},
+  Volume                   = {82},
+
+  Publisher                = {Biometrika Trust}
+}
+
+@Article{madigan1994model,
+  Title                    = {{Model selection and accounting for model uncertainty in graphical models using Occam's window}},
+  Author                   = {Madigan, David and Raftery, Adrian E},
+  Journal                  = {{Journal of the American Statistical Association}},
+  Year                     = {1994},
+  Number                   = {428},
+  Pages                    = {1535--1546},
+  Volume                   = {89},
+
+  Publisher                = {Taylor \& Francis}
+}
+
+@Article{hoeting1999bayesian,
+  Title                    = {Bayesian model averaging: a tutorial},
+  Author                   = {Hoeting, Jennifer A and Madigan, David and Raftery, Adrian E and Volinsky, Chris T},
+  Journal                  = {{Statistical Science}},
+  Year                     = {1999},
+  Number                   = {4},
+  Pages                    = {382--401},
+  Volume                   = {14},
+
+  Publisher                = {JSTOR}
+}
+
+@Article{kass1995bayes,
+  Title                    = {Bayes factors},
+  Author                   = {Kass, Robert E and Raftery, Adrian E},
+  Journal                  = {{Journal of the American Statistical Association}},
+  Year                     = {1995},
+  Number                   = {430},
+  Pages                    = {773--795},
+  Volume                   = {90},
+
+  Publisher                = {Taylor \& Francis Group}
+}
+
+@Article{posada2004model,
+  Title                    = {{Model selection and model averaging in phylogenetics: advantages of Akaike information criterion and Bayesian approaches over likelihood ratio tests}},
+  Author                   = {Posada, David and Buckley, Thomas R},
+  Journal                  = {Systematic Biology},
+  Year                     = {2004},
+  Number                   = {5},
+  Pages                    = {793--808},
+  Volume                   = {53},
+
+  Publisher                = {Oxford University Press}
+}
