--- a/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/RB_Chromosome_Evolution_Tutorial_3_content.tex
+++ b/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/RB_Chromosome_Evolution_Tutorial_3_content.tex
@@ -320,12 +320,12 @@ reduced three-lobed gynostemium. Other members of \textit{Aristolochia} have gyn
 chromosome evolution. 
 \begin{itemize}
 \item phenotype state 0 = 3 lobed gynostemium
-\item phenotype state 1 = 5 t0 24 lobed gynostemium
+\item phenotype state 1 = 5 to 24 lobed gynostemium
 \end{itemize}
 Much of this exercise is a repeat of what was already covered in Section \ref{sec:chromo_basic_analysis},
 so we will only touch on the model components that are different.
-We have provided a full working example script \texttt{scripts/BiChroM.Rev}
-In this example the phylogeny is assumed known. One could combine this with the exercise above
+We have provided a full working example script \texttt{scripts/BiChroM.Rev}.
+In this example the phylogeny is assumed known, however one could combine this with the exercise above
 to jointly infer the phylogeny.
 
 \begin{figure}[h!]
