minor fixes to chromo tutorial

--- a/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/RB_Chromosome_Evolution_Tutorial_0_content.tex
+++ b/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/RB_Chromosome_Evolution_Tutorial_0_content.tex
@@ -18,8 +18,8 @@ tests for correlated rates of phenotype and chromosome evolution \citep[the BiCh
 and incorporating cladogenetic changes in chromosome number.
 Next, we will introduce the ChromoSSE model \citep{freyman2016cladogenetic} which jointly
 estimates diversification rates and chromosome number evolution.
-Finally, we will briefly discuss comparing models of chromosome evolution using
-reversible-jump MCMC and Bayes factors.
+We also briefly discuss testing hypotheses of chromosome evolution by
+comparing different models using reversible-jump MCMC and Bayes factors.
 
 If you use \RevBayes for chromosome evolution analyses, please cite the original 
 papers that describe the chromosome evolution models as well as \citet{freyman2016cladogenetic}
