--- a/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/RB_Chromosome_Evolution_Tutorial_3_content.tex
+++ b/tutorial_TeX/RB_Chromosome_Evolution_Tutorial/RB_Chromosome_Evolution_Tutorial_3_content.tex
@@ -108,7 +108,7 @@ character history. This process is similar to the ancestral state summaries.
 First we read in the stochastic character map trace.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-anc_state_trace = readAncestralStateTrace("output/ChromEvol_simple_maps.log")
+anc_state_trace = readAncestralStateTrace("output/ChromEvol_maps.log")
 \end{lstlisting}
 \end{snugshade*}}
 Then we use the \texttt{characterMapTree} function. This generates two SIMMAP formatted files:
